# vard

./: .gitignore  .mimir.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  deny.toml  dist-workspace.toml  mise.toml  rust-toolchain.toml
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
docs/: commands.md
docs/commands/: config.md  diff.md  doctor.md  history.md  log.md  logs.md  notify.md  restore.md  run.md  self-update.md  service.md  snapshot.md  status.md  sync.md  watch.md
scripts/: ci-smoke.sh
vard/: Cargo.toml  build.rs
vard-core/: Cargo.toml
vard-core/src/: config.rs  engine.rs  event.rs  excludes.rs  gate.rs  lib.rs  scheduler.rs  secret_scan.rs  timefmt.rs  watcher.rs
vard-core/src/vcs/: git.rs  mod.rs
vard-core/tests/: engine.rs  git_backend.rs  watcher.rs
vard/src/: atomic.rs  cli.rs  command.rs  config.rs  config_cmd.rs  config_edit.rs  daemon.rs  doctor.rs  flock.rs  health.rs  instance.rs  journal.rs  main.rs  notify.rs  paths.rs  request.rs  status.rs
vard/src/cmd/: diff.rs  history.rs  log.rs  logs.rs  mod.rs  restore.rs  snapshot.rs  sync.rs  timefmt.rs
vard/src/help/: bin_name.rs  examples.rs  extract.rs  mod.rs  model.rs  render.rs
vard/src/hooks/: exec.rs  limiter.rs  mod.rs
vard/src/output/: format.rs  glyphs.rs  mod.rs  pager.rs  palette.rs  primitives.rs  record.rs
vard/src/self_update/: download.rs  http.rs  manifest.rs  mod.rs  receipt.rs  render.rs  resolve.rs  swap.rs
vard/src/service/: launchd.rs  mod.rs  systemd.rs
vard/src/watch/: excludes.rs  mod.rs  select.rs
vard/tests/: config_cli.rs  dist_manpages.rs  docs_coverage.rs  doctor_cli.rs  logs_cli.rs  notify_cli.rs  self_update_cli.rs  snapshot_cli.rs  status_cli.rs  sync_cli.rs  watch_cli.rs
vard/tests/common/: mod.rs
