[workspace]
resolver = "3"
members = ["vard-core", "vard"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Drew Butler <hi@dbtlr.com>"]
repository = "https://github.com/dbtlr/vard"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
# serde derive + toml back the binary's file-config layer (vard only). Duration
# strings deserialize through vard-core's parser, so no humantime crate is
# needed. See VRD-9.
serde = { version = "1", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"

[profile.dist]
inherits = "release"
lto = "thin"
