[workspace]
resolver = "3"
members = ["vard-core", "vard"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Drew Butler <hi@dbtlr.com>"]
repository = "https://github.com/dbtlr/vard"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
# Cross-platform filesystem notifications back vard-core's watcher: native
# FSEvents/inotify/ReadDirectoryChanges via recommended_watcher, with a
# PollWatcher fallback. `ignore` supplies gitignore-dialect exclude matching
# (the same dialect git writes to .git/info/exclude), so a watch's exclude
# patterns filter events exactly as git would ignore them.
notify = "8"
ignore = "0.4"
# serde derive + toml back the binary's file-config layer (vard only). Duration
# strings deserialize through vard-core's parser, so no humantime crate is
# needed. toml is trimmed to parse+serde: vard reads config, it never writes
# TOML. See VRD-9.
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }
# Advisory `flock` single-instance locking and `kill(pid, 0)` liveness probes
# for stale-lock recovery back the daemon shell (vard only). `fs` supplies
# `flock`; `process` supplies `test_kill_process`/`Pid`. Kept default-features
# off to stay dependency-light.
rustix = { version = "1", default-features = false, features = ["std", "fs", "process"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"
# Structured logging for the daemon shell (vard only). `tracing` is the emit
# API; `tracing-subscriber` renders to stderr via its `fmt` layer. The level is
# set programmatically from `[daemon].log_level`, so the `env-filter` feature is
# deliberately omitted — default features (fmt) are all the daemon needs.
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dist]
inherits = "release"
lto = "thin"
