[workspace]
resolver = "3"
members = ["vard-core", "vard"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Drew Butler <hi@dbtlr.com>"]
repository = "https://github.com/dbtlr/vard"

[workspace.dependencies]
tokio = { version = "1", default-features = false, features = ["sync"] }
# Cross-platform filesystem notifications back vard-core's watcher: native
# FSEvents/inotify/ReadDirectoryChanges via recommended_watcher, with a
# PollWatcher fallback. `ignore` supplies gitignore-dialect exclude matching
# (the same dialect git writes to .git/info/exclude), so a watch's exclude
# patterns filter events exactly as git would ignore them.
notify = "8"
ignore = "0.4"
# Small, dependency-free PRNG backing the pull-driven sync interval's per-tick
# jitter (vard-core). A seedable `Rng` keeps the jitter deterministic under
# test; production seeds a fresh instance per schedule, de-correlating watch
# cadences to reduce thundering-herd risk.
fastrand = "2"
# serde derive + toml back the binary's file-config layer (vard only). Duration
# strings deserialize through vard-core's parser, so no humantime crate is
# needed. `toml` is trimmed to parse+serde for the read path; `toml_edit` backs
# the comment-preserving mutation path (`vard watch add/remove/pause/resume`),
# which rewrites config.toml in place without disturbing a user's comments or
# formatting. See VRD-9 / VRD-15.
serde = { version = "1", features = ["derive"] }
toml = { version = "0.9", default-features = false, features = ["parse", "display", "serde"] }
toml_edit = { version = "0.23", default-features = false, features = ["parse", "display"] }
# Advisory `flock` single-instance locking and `kill(pid, 0)` liveness probes
# for stale-lock recovery back the daemon shell (vard only). `fs` supplies
# `flock`; `process` supplies `test_kill_process`/`Pid`; `system` supplies
# `uname` (the host name stamped into a pre-sync snapshot's `Vard-Host`
# trailer). Kept default-features off to stay dependency-light.
rustix = { version = "1", default-features = false, features = ["std", "fs", "process", "system"] }
# The `vard self-update` client (vard only, VRD-25). `ureq` is a small blocking
# HTTP client (rustls TLS, no async runtime pulled in) fetching cargo-dist's
# `dist-manifest.json` and the release tarball; `sha2` verifies the tarball's
# sha256 from the manifest before anything is unpacked; `tar` + `xz2` unpack the
# cargo-dist `.tar.xz`; `serde_json` parses the manifest and the install receipt.
# rustls keeps the four musl/darwin release targets buildable without a system
# OpenSSL, matching norn's proven release client.
ureq = { version = "2", default-features = false, features = ["tls"] }
sha2 = "0.10"
tar = "0.4"
xz2 = "0.1"
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_complete_nushell = "4.5"
clap_mangen = "0.3"
# CLI output primitives (vard only). `anstyle` carries the ANSI-256 color
# styles behind the palette; `terminal_size` supplies the width/height the
# help renderer and pager need to wrap and page output on a TTY.
anstyle = "1"
terminal_size = "0.4"
# Structured logging for the daemon shell (vard only). `tracing` is the emit
# API; `tracing-subscriber` renders to stderr via its `fmt` layer. The level is
# set programmatically from `[daemon].log_level`, so the `env-filter` feature is
# deliberately omitted — default features (fmt) are all the daemon needs.
# `tracing-appender` adds the daemon's daily-rolling logfile sink (VRD-23),
# capped by `max_log_files` retention and fed through a non-blocking writer whose
# `WorkerGuard` lives for the daemon's lifetime.
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

[profile.dist]
inherits = "release"
lto = "thin"
