[package]
name = "vard-core"
description = "Embeddable engine for vard: directory watching, snapshotting, and VCS backends"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
# Real git repositories in tempdirs back the vcs backend's integration tests.
# Dev-only: the crate's non-dev dependency tree stays tokio-only.
tempfile = "3"
