[package]
name = "vard-core"
description = "Embeddable engine for vard: directory watching, snapshotting, and VCS backends"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# The watcher needs `rt` (spawn one quiescence task per armed watch on the
# ambient runtime) and `time` (per-watch quiescence deadlines) on top of the
# `sync` channels the rest of the crate uses. `macros` is deliberately NOT
# enabled here: the quiescence loop uses `tokio::time::timeout` rather than
# `select!`, so the macro feature stays dev-only (for `#[tokio::test]`).
tokio = { workspace = true, features = ["rt", "time"] }
notify = { workspace = true }
ignore = { workspace = true }
# On unix, a timed-out `fetch`/`push` kills the git child's whole process group
# (`kill_process_group`) so an ssh transport's children die with it rather than
# leaking. Reuses the workspace `rustix` already pulled in for the daemon's
# `flock`/liveness probes; only the `process` feature is needed here.
rustix = { workspace = true }

[dev-dependencies]
# `macros` + `test-util` drive the watcher's deterministic tests: paused-time
# (`start_paused`) quiescence tests and `#[tokio::test]` real-FS tests.
tokio = { workspace = true, features = ["rt", "macros", "sync", "test-util"] }
# Real git repositories and watched directories in tempdirs back the vcs
# backend's and watcher's integration tests.
tempfile = "3"
