[package]
name = "vard"
description = "Watch directories and automatically snapshot them into version control"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "vard"
path = "src/main.rs"

[dependencies]
# Pure path dependency until vard-core is published; VRD-29 restores the version requirement.
vard-core = { path = "../vard-core" }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
clap_mangen = { workspace = true }
