[package]
name = "vard"
description = "Watch directories and automatically snapshot them into version control"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "vard"
path = "src/main.rs"

[dependencies]
# Pure path dependency until vard-core is published; VRD-29 restores the version requirement.
vard-core = { path = "../vard-core" }
clap = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
rustix = { workspace = true }
# The `vard self-update` client (VRD-25); see the workspace-deps comment.
ureq = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
xz2 = { workspace = true }
serde_json = { workspace = true }
# CLI output + help contract: `anstyle` backs the color palette; `terminal_size`
# feeds terminal-width wrapping and the pager gate. See `src/output`.
anstyle = { workspace = true }
terminal_size = { workspace = true }
# The daemon shell (`vard run`) drives the async engine, so it needs a
# multi-thread runtime, `macros` for `#[tokio::main]`/`select!`, `signal` for
# SIGINT/SIGTERM/SIGHUP, and `time` for the config-poll and backoff timers on top
# of the workspace `sync` channels.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
# Tempdir-isolated tests for the instance lock, operation journal, and the
# daemon smoke test; mirrors vard-core's dev-dependency.
tempfile = "3"
# A local mock HTTP server backing the self-update client's tests (VRD-25), so
# the manifest/download flow is exercised without touching the real network.
mockito = "1"

[build-dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_complete_nushell = { workspace = true }
clap_mangen = { workspace = true }
